--- a/Blog/2024_7_27_procinj.md
+++ b/Blog/2024_7_27_procinj.md
@@ -2,27 +2,27 @@ I created a windows 10 machine called ProcInj, focusing on process injection and
 
 ProcInj hosts a website as below
 
-<img src="../../../Images/website.png">
+<img src="../Images/website.png">
 
 After messing around with the website, we notice that there's a form commented on the website, uncomment it and submit the form we have a zip file downloaded to our machine
 
-<img src="../../../Images/website_hidden_form.png">
+<img src="../Images/website_hidden_form.png">
 <br><br>
-<img src="../../../Images/website_download.png">
+<img src="../Images/website_download.png">
 
 Try open it, we notice it's password protected
 
-<img src="../../../Images/zip_protected.png">
+<img src="../Images/zip_protected.png">
 
 Use JohnTheRipper to crack the password with password list: https://github.com/danielmiessler/SecLists/blob/master/Passwords/Common-Credentials/common-passwords-win.txt 
 
-<img src="../../../Images/zip2john.png">
+<img src="../Images/zip2john.png">
 <br><br>
-<img src="../../../Images/zip_crack.png">
+<img src="../Images/zip_crack.png">
 
 Unzip the file and open information.txt we have
 
-<img src="../../../Images/information_txt.png">
+<img src="../Images/information_txt.png">
 
 Messing around with the website, we notice it is used to compile a .cpp file into exe or dll. However, it forbids us to compile .cpp file with windows api into exe. Information.txt tells us that only C://ProgramData/ProcInj/System/debug.exe can run. Further test also shows that we can submit customed command with the form (We can craft it like ```hello && echo "1" > hello.txt``` then a file named hello.txt with 1 as its content will be created)
 
@@ -202,7 +202,7 @@ We will initiate the process with these following payload respectively
 
 We got reverse shell in the end 
 
-<img src="../../../Images/terminal.png">
+<img src="../Images/terminal.png">
 
 We also notice that we cannot use tasklist or tskill or stop-process to stop av.exe; however, once we got the shell, it's ok to do that and get full access of the shell
 
